@@ -2,6 +2,9 @@
 ?? ??? 2007 - trunk
 -------------------
 
+ * Added t:trimLeft, t:trimRight, t:trim to remove whitespace
+   from a value on the left, right or both.
+
  * Added SecAuditLog2 directive to allow redundent concurrent audit log
    index files.  This will allow sending audit data to two consoles, etc.
 
